--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -28,3 +28,18 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* 
+  Fix for Tailwind borders when preflight is disabled 
+  (needed because Docusaurus/Infima doesn't set these defaults)
+*/
+.border {
+  border-style: solid;
+}
+
+
